# FlowForge

./: .gitignore  .prettierignore  .prettierrc.json  ACCEPTANCE.md  CLAUDE.md  PLAN.md  TODO1.md  TODO10.md  TODO11.md  TODO12.md  TODO2.md  TODO3.md  TODO4.md  TODO5.md  TODO6.md  TODO7.md  TODO8.md  TODO9.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vitest.config.ts
.claude/: settings.local.json
.husky/: pre-commit
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: grpc.rs  http.rs  keyring.rs  mock.rs  mod.rs  proto.rs  script.rs  sse.rs  store.rs  websocket.rs
src-tauri/src/models/: error.rs  execution.rs  flow.rs  grpc.rs  mock.rs  mod.rs  proto.rs  request.rs  response.rs  script.rs  sse.rs  websocket.rs
src-tauri/src/services/: app_state.rs  grpc_client.rs  http_client.rs  keyring.rs  logging.rs  mock_server.rs  mod.rs  proto_manager.rs  script_engine.rs  sse_client.rs  websocket_client.rs
src-tauri/src/utils/: error.rs  mod.rs
src/assets/styles/: canvas.css  main.css
src/components/canvas/: Canvas.vue  (+3 more)
src/composables/: useAppMenu.ts  useAutosave.ts  useContextMenu.ts  useDragDrop.ts  useKeyboardHandler.ts  useSnapGuide.ts  useTheme.ts  useWindowState.ts
src/constants/: app.ts  errors.ts  httpMethods.ts  node-types.ts  schema.ts  sizes.ts
src/locales/: en-US.ts  index.ts  zh-CN.ts
src/providers/: index.ts  local.provider.ts  types.ts
src/router/: index.ts
src/services/: error.service.ts  file.service.ts  http.service.ts  migration.service.ts
src/stores/: autosave.ts  canvas.ts  dragDrop.ts  environment.ts  execution.ts  flow.ts  history.ts  index.ts  project.ts  settings.ts  tabs.ts
src/types/: cookie.types.ts  edge.types.ts  execution.types.ts  flow.types.ts  import.types.ts  index.ts  mapping.types.ts  menu.types.ts  mock.types.ts  node.types.ts  project.types.ts  proto.types.ts  proxy.types.ts  request.types.ts  ssl.types.ts  window.types.ts
src/views/: FlowEditor.vue  HomeView.vue
(+32 files in other folders)
